# UXP-projekt

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
src/: utility.cpp  utility.h
src/client/: client.cpp  client.h  main_client.cpp
src/common/: AuxiliaryParsingFunctions.h  LindaParser.cpp  LindaParser.h  LindaPattern.h  LindaTuple.h
src/server/: PatternWrapper.h  main_server.cpp  server.cpp  server.h
src/tests/: AuxiliaryFunctions.h  main.cpp  parsingLindaCommands.cpp  parsingPatterns.cpp  parsingTuples.cpp
systemTests/: main_test.cpp  systemTests.cpp  test.cpp
systemTests/scripts/: client-1.txt  client-2.txt  complicatedMsg.sh  complicatedMsg.txt  example.sh  groundtruth-complicatedMsg.txt  groundtruth-multipleClients.txt  groundtruth-simpleMsg.txt  groundtruth-twoClients.txt  groundtruth-twoClientsMixed.txt  receiver-1.txt  receiver-2.txt  runCommands.sh  runCommandsNoOutput.sh  sender-1.sh  sender-1.txt  sender-2.txt  simpleMsg.sh  simpleMsg.txt
test/: AuxiliaryFunctions.h  main.cpp  parsingLindaCommands.cpp  parsingPatterns.cpp  parsingTuples.cpp  patternTupleComparisons.cpp  systemTests.cpp
test/scripts/: example.sh  groundtruth-example.txt
